--- a/data/python/conda/fed-gwas/conda.yml
+++ b/data/python/conda/fed-gwas/conda.yml
@@ -1,4 +1,4 @@
-name: ppgwas_env
+name: ppgwas
 channels:
   - defaults
 dependencies:
@@ -75,3 +75,34 @@ dependencies:
   - zlib=1.2.13
   - zstandard=0.19.0
   - zstd=1.5.5
+  - pip:
+    - bed-reader==0.2.36
+    - bgen-reader==4.0.8
+    - cachetools==5.3.1
+    - cbgen==1.0.4
+    - chardet==5.2.0
+    - click==8.1.6
+    - cloudpickle==2.2.1
+    - dask==2023.8.0
+    - fsspec==2023.6.0
+    - joblib==1.4.2
+    - h5py==3.9.0
+    - importlib-metadata==6.8.0
+    - iniconfig==2.0.0
+    - locket==1.0.0
+    - more-itertools==10.1.0
+    - pandas==2.0.3
+    - partd==1.4.0
+    - pluggy==1.0.0
+    - pysnptools==0.5.10
+    - pytest==7.4.0
+    - pytz==2023.3
+    - pyyaml==6.0.1
+    - sparse-dot-mkl==0.8.3
+    - texttable==1.6.7
+    - toolz==0.12.0
+    - tqdm==4.65.0
+    - tzdata==2023.3
+    - xarray==2023.7.0
+    - zipp==3.16.2
+    - git+https://github.com/PrivateAIM/flame-patterns.git@0.3.1
