--- a/data/python/conda/fed-gwas/Dockerfile
+++ b/data/python/conda/fed-gwas/Dockerfile
@@ -1,9 +1,8 @@
 FROM continuumio/miniconda3
 
-
 RUN apt-get update -yqq && \
       apt-get install -yqq git
 
 COPY conda.yml /tmp/conda.yml
 
-RUN conda env create -n ppgwas -f /tmp/conda.yml
+RUN conda env create -f /tmp/conda.yml
